# prune_chat

./: .gitignore  .travis.yml  dev-requirements.txt  requirements.txt  setup.cfg  setup.py  tox.ini
chatterbot/: comparisons.py  corpus.py  tagging.py
chatterbot/prune_corpus/: __init__.py
examples/django_app/: requirements.txt
tests_django/: test_statement_integration.py
